{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 58,
  "lineage": "e3ce4ead-cf91-0161-f6f7-04b6700767e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:security-group/sg-02ad3fcf19304dd95",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02ad3fcf19304dd95",
            "ingress": [],
            "name": "all_worker_management20240331130509817600000005",
            "name_prefix": "all_worker_management",
            "owner_id": "535556339197",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-1177933942",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02ad3fcf19304dd95",
            "security_group_rule_id": "sgr-0cbd51366dce2266d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-832467557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02ad3fcf19304dd95",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:security-group/sg-021e77aec9f25adb7",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-021e77aec9f25adb7",
            "ingress": [],
            "name": "sekhar-eks-Uf2hGB7m-cluster-20240331130512188300000007",
            "name_prefix": "sekhar-eks-Uf2hGB7m-cluster-",
            "owner_id": "535556339197",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sekhar-eks-Uf2hGB7m-cluster",
              "cluster": "demo"
            },
            "tags_all": {
              "Name": "sekhar-eks-Uf2hGB7m-cluster",
              "cluster": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:security-group/sg-049bf98dc2e3325cc",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-049bf98dc2e3325cc",
            "ingress": [],
            "name": "sekhar-eks-Uf2hGB7m-node-20240331130512210300000008",
            "name_prefix": "sekhar-eks-Uf2hGB7m-node-",
            "owner_id": "535556339197",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sekhar-eks-Uf2hGB7m-node",
              "cluster": "demo",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "owned"
            },
            "tags_all": {
              "Name": "sekhar-eks-Uf2hGB7m-node",
              "cluster": "demo",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-538998307",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021e77aec9f25adb7",
            "security_group_rule_id": "sgr-012f56658fd7bb346",
            "self": false,
            "source_security_group_id": "sg-049bf98dc2e3325cc",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2304363261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-049bf98dc2e3325cc",
            "security_group_rule_id": "sgr-0cf4f18d5592b993d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2197212075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-049bf98dc2e3325cc",
            "security_group_rule_id": "sgr-035e1a06004d3723b",
            "self": false,
            "source_security_group_id": "sg-021e77aec9f25adb7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2252676495",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-049bf98dc2e3325cc",
            "security_group_rule_id": "sgr-06699d79e75a3a56f",
            "self": false,
            "source_security_group_id": "sg-021e77aec9f25adb7",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1325890073",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-049bf98dc2e3325cc",
            "security_group_rule_id": "sgr-08995808104551315",
            "self": false,
            "source_security_group_id": "sg-021e77aec9f25adb7",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1549485624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-049bf98dc2e3325cc",
            "security_group_rule_id": "sgr-04c7faf293326ac90",
            "self": false,
            "source_security_group_id": "sg-021e77aec9f25adb7",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-955938291",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-049bf98dc2e3325cc",
            "security_group_rule_id": "sgr-07d6f58b43ef811ba",
            "self": false,
            "source_security_group_id": "sg-021e77aec9f25adb7",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2742769909",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-049bf98dc2e3325cc",
            "security_group_rule_id": "sgr-0008340b8a9caeb41",
            "self": false,
            "source_security_group_id": "sg-021e77aec9f25adb7",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3640641861",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-049bf98dc2e3325cc",
            "security_group_rule_id": "sgr-06d1c7fdd5681dc89",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4169839821",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-049bf98dc2e3325cc",
            "security_group_rule_id": "sgr-0ff8c681626f94188",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1557468962",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-049bf98dc2e3325cc",
            "security_group_rule_id": "sgr-085cc37172ea3354b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:network-acl/acl-0da6be3edce65f683",
            "default_network_acl_id": "acl-0da6be3edce65f683",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0da6be3edce65f683",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "535556339197",
            "subnet_ids": [
              "subnet-039dd6241d4106cc2",
              "subnet-03fa74e7fcaec3563",
              "subnet-06d6a8dc99e908f9b",
              "subnet-074561e7511a96f75"
            ],
            "tags": {
              "Name": "sekhar-eks-vpc-default",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc-default",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:route-table/rtb-0897ccb58b32b6936",
            "default_route_table_id": "rtb-0897ccb58b32b6936",
            "id": "rtb-0897ccb58b32b6936",
            "owner_id": "535556339197",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "sekhar-eks-vpc-default",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc-default",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:security-group/sg-079da7e3ecce9bb68",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-079da7e3ecce9bb68",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "535556339197",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sekhar-eks-vpc-default",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc-default",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076108c28bfcc9189",
            "domain": "vpc",
            "id": "eipalloc-076108c28bfcc9189",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-207-71-132.compute-1.amazonaws.com",
            "public_ip": "52.207.71.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sekhar-eks-vpc-us-east-1a",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc-us-east-1a",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:internet-gateway/igw-025b439504cd8f324",
            "id": "igw-025b439504cd8f324",
            "owner_id": "535556339197",
            "tags": {
              "Name": "sekhar-eks-vpc",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076108c28bfcc9189",
            "association_id": "eipassoc-0e2c495b49fca0ff8",
            "connectivity_type": "public",
            "id": "nat-0f2f5901aefcd57b1",
            "network_interface_id": "eni-00daa803f33034f51",
            "private_ip": "10.0.4.40",
            "public_ip": "52.207.71.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03fa74e7fcaec3563",
            "tags": {
              "Name": "sekhar-eks-vpc-us-east-1a",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc-us-east-1a",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e024d63c8f59a3461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f2f5901aefcd57b1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e024d63c8f59a346",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-025b439504cd8f324",
            "id": "r-rtb-03a895dad2aaa55bf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a895dad2aaa55bf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:route-table/rtb-0e024d63c8f59a346",
            "id": "rtb-0e024d63c8f59a346",
            "owner_id": "535556339197",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sekhar-eks-vpc-private",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc-private",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:route-table/rtb-03a895dad2aaa55bf",
            "id": "rtb-03a895dad2aaa55bf",
            "owner_id": "535556339197",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sekhar-eks-vpc-public",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc-public",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d82593fdbd54b9c2",
            "route_table_id": "rtb-0e024d63c8f59a346",
            "subnet_id": "subnet-039dd6241d4106cc2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e359b3ad6919b79",
            "route_table_id": "rtb-0e024d63c8f59a346",
            "subnet_id": "subnet-06d6a8dc99e908f9b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3bbe5b9d2bbaf62",
            "route_table_id": "rtb-03a895dad2aaa55bf",
            "subnet_id": "subnet-03fa74e7fcaec3563"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c71b1e06741cc7c",
            "route_table_id": "rtb-03a895dad2aaa55bf",
            "subnet_id": "subnet-074561e7511a96f75"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:subnet/subnet-039dd6241d4106cc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039dd6241d4106cc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535556339197",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sekhar-eks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:subnet/subnet-06d6a8dc99e908f9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d6a8dc99e908f9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535556339197",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sekhar-eks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:subnet/subnet-03fa74e7fcaec3563",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fa74e7fcaec3563",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535556339197",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sekhar-eks-vpc-public-us-east-1a",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc-public-us-east-1a",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:subnet/subnet-074561e7511a96f75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074561e7511a96f75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535556339197",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sekhar-eks-vpc-public-us-east-1b",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc-public-us-east-1b",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02ad3633a77b8ebec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535556339197:vpc/vpc-02ad3633a77b8ebec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da6be3edce65f683",
            "default_route_table_id": "rtb-0897ccb58b32b6936",
            "default_security_group_id": "sg-079da7e3ecce9bb68",
            "dhcp_options_id": "dopt-02ea70b8c364cf899",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ad3633a77b8ebec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0897ccb58b32b6936",
            "owner_id": "535556339197",
            "tags": {
              "Name": "sekhar-eks-vpc",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            },
            "tags_all": {
              "Name": "sekhar-eks-vpc",
              "kubernetes.io/cluster/sekhar-eks-Uf2hGB7m": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}